// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination render should render correctly - no data 1`] = `<DocumentFragment />`;

exports[`Pagination render should render correctly - with no access 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-:r9:"
    data-ouia-component-type="PF6/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-v6-c-pagination__total-items"
    >
      <b>
        0 - 0
      </b>
       of 
      <b>
        0
      </b>
       
    </div>
    <div
      class="pf-v6-c-pagination__page-menu"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Items per page"
        class="pf-v6-c-menu-toggle pf-m-plain pf-m-text pf-m-disabled"
        data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:rb:"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        disabled=""
        id="options-menu-top-toggle"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <b>
            0 - 0
          </b>
           of 
          <b>
            0
          </b>
           
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-v6-c-pagination__nav"
    >
      <div
        class="pf-v6-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-label="Go to first page"
          class="pf-v6-c-button pf-m-plain"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rc:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M15.707 28.293a.999.999 0 1 1-1.414 1.414L1.646 17.061a1.501 1.501 0 0 1 0-2.121L14.293 2.293a.999.999 0 1 1 1.414 1.414L3.414 16l12.293 12.293ZM17.414 16 29.707 3.707a.999.999 0 1 0-1.414-1.414L15.647 14.939a1.501 1.501 0 0 0 0 2.121l12.646 12.646a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414L17.414 15.999Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to previous page"
          class="pf-v6-c-button pf-m-plain"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rd:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-page-select"
      >
        <span
          class="pf-v6-c-form-control pf-m-disabled"
        >
          <input
            aria-invalid="false"
            aria-label="Current page"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:rf:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            disabled=""
            max="0"
            min="1"
            type="number"
            value="0"
          />
        </span>
        <span
          aria-hidden="true"
        >
          of 0
        </span>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to next page"
          class="pf-v6-c-button pf-m-plain"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rg:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-label="Go to last page"
          class="pf-v6-c-button pf-m-plain"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rh:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Pagination render should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-:r0:"
    data-ouia-component-type="PF6/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-v6-c-pagination__total-items"
    >
      <b>
        0 - 0
      </b>
       of 
      <b>
        0
      </b>
       
    </div>
    <div
      class="pf-v6-c-pagination__page-menu"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Items per page"
        class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
        data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:r2:"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        id="options-menu-top-toggle"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <b>
            0 - 0
          </b>
           of 
          <b>
            0
          </b>
           
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-v6-c-pagination__nav"
    >
      <div
        class="pf-v6-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-label="Go to first page"
          class="pf-v6-c-button pf-m-plain"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M15.707 28.293a.999.999 0 1 1-1.414 1.414L1.646 17.061a1.501 1.501 0 0 1 0-2.121L14.293 2.293a.999.999 0 1 1 1.414 1.414L3.414 16l12.293 12.293ZM17.414 16 29.707 3.707a.999.999 0 1 0-1.414-1.414L15.647 14.939a1.501 1.501 0 0 0 0 2.121l12.646 12.646a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414L17.414 15.999Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to previous page"
          class="pf-v6-c-button pf-m-plain"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r4:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-page-select"
      >
        <span
          class="pf-v6-c-form-control pf-m-disabled"
        >
          <input
            aria-invalid="false"
            aria-label="Current page"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r6:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            disabled=""
            max="0"
            min="1"
            type="number"
            value="0"
          />
        </span>
        <span
          aria-hidden="true"
        >
          of 0
        </span>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to next page"
          class="pf-v6-c-button pf-m-plain"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-label="Go to last page"
          class="pf-v6-c-button pf-m-plain"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r8:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Pagination render should render correctly with data and isFull 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-pagination pf-m-bottom"
    data-ouia-component-id="OUIA-Generated-Pagination-bottom-:rr:"
    data-ouia-component-type="PF6/Pagination"
    data-ouia-safe="true"
    id="options-menu-bottom-pagination"
    style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-v6-c-pagination__page-menu"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Items per page"
        class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
        data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:rt:"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        id="options-menu-bottom-toggle"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <b>
            1 - 50
          </b>
           of 
          <b>
            500
          </b>
           
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-v6-c-pagination__nav"
    >
      <div
        class="pf-v6-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-label="Go to first page"
          class="pf-v6-c-button pf-m-plain"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-:ru:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M15.707 28.293a.999.999 0 1 1-1.414 1.414L1.646 17.061a1.501 1.501 0 0 1 0-2.121L14.293 2.293a.999.999 0 1 1 1.414 1.414L3.414 16l12.293 12.293ZM17.414 16 29.707 3.707a.999.999 0 1 0-1.414-1.414L15.647 14.939a1.501 1.501 0 0 0 0 2.121l12.646 12.646a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414L17.414 15.999Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to previous page"
          class="pf-v6-c-button pf-m-plain"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rv:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-page-select"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            aria-label="Current page"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:r11:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </span>
        <span
          aria-hidden="true"
        >
          of 10
        </span>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to next page"
          class="pf-v6-c-button pf-m-plain"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r12:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-label="Go to last page"
          class="pf-v6-c-button pf-m-plain"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r13:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Pagination render should render correctly with data and props 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-pagination"
    data-ouia-component-id="OUIA-Generated-Pagination-top-:ri:"
    data-ouia-component-type="PF6/Pagination"
    data-ouia-safe="true"
    id="options-menu-top-pagination"
    style="--pf-v6-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
  >
    <div
      class="pf-v6-c-pagination__total-items"
    >
      <b>
        1 - 50
      </b>
       of 
      <b>
        500
      </b>
       
    </div>
    <div
      class="pf-v6-c-pagination__page-menu"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="Items per page"
        class="pf-v6-c-menu-toggle pf-m-plain pf-m-text"
        data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-:rk:"
        data-ouia-component-type="PF6/MenuToggle"
        data-ouia-safe="true"
        id="options-menu-top-toggle"
        type="button"
      >
        <span
          class="pf-v6-c-menu-toggle__text"
        >
          <b>
            1 - 50
          </b>
           of 
          <b>
            500
          </b>
           
        </span>
        <span
          class="pf-v6-c-menu-toggle__controls"
        >
          <span
            class="pf-v6-c-menu-toggle__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 320 512"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </button>
    </div>
    <nav
      aria-label="Pagination"
      class="pf-v6-c-pagination__nav"
    >
      <div
        class="pf-v6-c-pagination__nav-control pf-m-first"
      >
        <button
          aria-label="Go to first page"
          class="pf-v6-c-button pf-m-plain"
          data-action="first"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rl:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M15.707 28.293a.999.999 0 1 1-1.414 1.414L1.646 17.061a1.501 1.501 0 0 1 0-2.121L14.293 2.293a.999.999 0 1 1 1.414 1.414L3.414 16l12.293 12.293ZM17.414 16 29.707 3.707a.999.999 0 1 0-1.414-1.414L15.647 14.939a1.501 1.501 0 0 0 0 2.121l12.646 12.646a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414L17.414 15.999Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to previous page"
          class="pf-v6-c-button pf-m-plain"
          data-action="previous"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rm:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M21 30a.997.997 0 0 1-.707-.293L7.647 17.061a1.501 1.501 0 0 1 0-2.121L20.293 2.293a.999.999 0 1 1 1.414 1.414L9.414 16l12.293 12.293A.999.999 0 0 1 21 30Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-page-select"
      >
        <span
          class="pf-v6-c-form-control"
        >
          <input
            aria-invalid="false"
            aria-label="Current page"
            data-ouia-component-id="OUIA-Generated-TextInputBase-:ro:"
            data-ouia-component-type="PF6/TextInput"
            data-ouia-safe="true"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </span>
        <span
          aria-hidden="true"
        >
          of 10
        </span>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control"
      >
        <button
          aria-label="Go to next page"
          class="pf-v6-c-button pf-m-plain"
          data-action="next"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rp:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 256 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M11 30a.999.999 0 0 1-.707-1.707L22.586 16 10.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121L11.707 29.706a.997.997 0 0 1-.707.293Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-pagination__nav-control pf-m-last"
      >
        <button
          aria-label="Go to last page"
          class="pf-v6-c-button pf-m-plain"
          data-action="last"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rq:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 448 512"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M30.354 17.061 17.708 29.707a.997.997 0 0 1-1.414 0 .999.999 0 0 1 0-1.414L28.587 16 16.293 3.707a.999.999 0 1 1 1.414-1.414l12.646 12.646a1.501 1.501 0 0 1 0 2.121Zm-14-2.122L3.707 2.293a.999.999 0 1 0-1.414 1.414L14.586 16 2.293 28.293a.999.999 0 1 0 1.414 1.414l12.646-12.646a1.501 1.501 0 0 0 0-2.121Z"
                />
              </svg>
            </svg>
          </span>
        </button>
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
